--- a/todo_app/src/App.css
+++ b/todo_app/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.add_btn{
+  margin: 50px;
+}
+
+.input-f{
+  color: aqua;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
